<resources>
    <string name="app_name">final projectk</string>
    <string name="insorma">InSorma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="about">about</string>
    <string name="history">history</string>
    <string name="create_table">
        CREATE TABLE `product` (
  `ProductName` varchar(30) NOT NULL,
  `ProductRating` int(11) NOT NULL,
  `ProductPrice` double NOT NULL,
  `ProductImage` varchar(255) NOT NULL,
  `ProductDescription` varchar(255) NOT NULL

);
CREATE TABLE `transaction` (
  `TransactionID` int(11) NOT NULL,
  `UserID` int(11) NOT NULL,
  `ProductName` varchar(30) NOT NULL,
  `TransactionDate` date NOT NULL,
  `Quantity` int(11) NOT NULL
);

CREATE TABLE `users` (
  `UserID` int(11) NOT NULL,
  `UserEmailAddress` varchar(30) NOT NULL,
  `UserUsername` varchar(20) NOT NULL,
  `UserPhone` int(11) NOT NULL,
  `UserPassword` varchar(30) NOT NULL
);

ALTER TABLE `product`
  ADD PRIMARY KEY (`ProductName`);

ALTER TABLE `users`
  ADD PRIMARY KEY (`UserID`);

ALTER TABLE `transaction`
  ADD PRIMARY KEY (`TransactionID`),
  ADD KEY `UserID` (`UserID`),
  ADD KEY `ProductName` (`ProductName`);

ALTER TABLE `transaction`
  MODIFY `TransactionID` int(11) NOT NULL AUTO_INCREMENT;

ALTER TABLE `users`
  MODIFY `UserID` int(11) NOT NULL AUTO_INCREMENT;

ALTER TABLE `transaction`
  ADD CONSTRAINT `transaction_ibfk_1` FOREIGN KEY (`UserID`) REFERENCES `users` (`UserID`) ON DELETE CASCADE ON UPDATE CASCADE,
  ADD CONSTRAINT `transaction_ibfk_2` FOREIGN KEY (`ProductName`) REFERENCES `product` (`ProductName`) ON DELETE CASCADE ON UPDATE CASCADE;
    </string>
    <string name="name">Name</string>
    <string name="price">price</string>
    <string name="furniture_list">Furniture List</string>
    <string name="buy">buy</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="save">Save</string>
    <string name="insorma_outlet_location">Insorma Outlet Location</string>
    <string name="title_app">K22 Project</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="transaction_history">Transaction History</string>
    <string name="there_is_no_data">There is No Data</string>
    <string name="home">Home</string>
    <string name="LandingActivity">Login</string>
    <string name="HomeActivity">Welcome to InSorma</string>
    <string name="DetailActivity">Product Detail</string>
    <string name="ProfileActivity">Your Profile</string>
    <string name="HistoryActivity">Transaction History</string>
</resources>