<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical"
    android:layout_margin="35dp">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detailImage"
            app:riv_border_width="1dp"
            app:riv_border_color="@color/grey"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@color/purple_200"
            app:riv_corner_radius="20dip"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/detailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="21sp"
                android:text="@string/product_name"/>

            <RatingBar
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:numStars="5"
                android:stepSize="0.5"
                android:transformPivotX="0dp"
                android:translationY="0dp"
                android:layout_marginVertical="3dp"
                android:id="@+id/detailRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Small"/>

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/detailPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:text="@string/product_price"/>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/detailDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18sp"
        android:justificationMode="inter_word" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <Button
            android:layout_gravity="center"
            android:id="@+id/btnDecrease"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:text="@string/minus"/>

        <TextView
            android:id="@+id/detailQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/_0"/>

        <Button
            android:id="@+id/btnIncrease"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:text="@string/plus" />

    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_gravity="center"/>



</LinearLayout>